# oo_desktop_testing

./: .gitignore  config.json  config.py  make_requirements.py  make_requirements_toml.py  pyproject.toml  requirements.txt  tasks.py
assets/: readme
frameworks/: StaticData.py
frameworks/browser_control/: Chrome.py  __init__.py  chrome_info.py
frameworks/browser_control/chrome_driver/: url_generator.py
frameworks/decorators/: decorators.py
frameworks/desktop/: __init__.py  data.py  desktop_config.json  desktop_data.py  desktop_editor.py  installer.py
frameworks/desktop/package/: __init__.py  desktop_package.py  package.py  url_config.json  url_generator.py
frameworks/desktop/package/Portal/: __init__.py  onlyoffice.py  portal.py
frameworks/host_control/: FileUtils.py  HostInfo.py  __init__.py
frameworks/host_control/host_info/: HostInfo.py  Unix.py
frameworks/host_control/windows_handler/: __init__.py  linux_window.py  windows.py
frameworks/image_handler/: image.py
frameworks/telegram/: telegram.py
tests/: desktop_test.py
tests/assets/: console_exceptions.json
tests/assets/good_files/: document.docx  form_document.docxf  presentation.pptx  spreadsheet.xlsx
tests/tools/: desktop_report.py  report.py
