[tool.poetry]
name = "oo-desktop-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "oo_desktop_testing"}]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "*"
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
invoke = "*"
rich = "*"
psutil = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
