[tool.poetry]
name = "oo-desktop-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "oo_desktop_testing"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "3.141.0"
invoke = "2.1.3"
rich = "13.4.2"
psutil = "5.9.5"
requests = "*"
py7zr = "0.20.5"
distro = "1.8.0"
pyvirtualdisplay = "3.0"
elevate = "^0.1.3"
urllib3 = '1.26.6'
mss = "9.0.1"
opencv-python = "4.7.0.72"
python-xlib = '0.33'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
